Updated index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,174 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>TMPS00042</title>
+<link href="css/TMPH00042/css/styles.css" rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
+
+<!---menu--->
+<link rel="stylesheet" href="css/TMPH00042/css/superfish.css" media="screen">
+<script src="css/TMPH00042/js/jquery-1.9.0.min.js"></script>
+<script src="css/TMPH00042/js/hoverIntent.js"></script>
+<script src="css/TMPH00042/js/superfish.js"></script>
+<script>
+
+		// initialise plugins
+		jQuery(function(){
+			jQuery('#example').superfish({
+				//useClick: true
+			});
+		});
+
+		</script>
+
+</head>
+<body>
+<div class="header-wrap" align="right">
+  <div class="logo">
+    <h1>Demos</h1>
+  </div>
+  <!---
+  <div align="center">
+      <div class="menu">
+            <img src="css/TMPH00042/images/menu-left.png" alt="image" />
+        	<ul class="sf-menu" id="example">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="works.html">Works</a> </li>
+                <li></li>
+            </ul>
+            <img src="css/TMPH00042/images/menu-right.png" alt="image"/>
+      </div>
+  </div>
+  --->
+</div>
+<!---header-wrap--->
+<div class="clear"></div>
+<div class="banner-wrap">
+  <!--- <div class="banner"> <img src="cccss/TMPH00042/images/banner1.jpg" alt="banner" /> </div> --->
+</div>
+<!---banner--->
+<div class="page-wrap">
+  <div class="wrap">
+    <div class="box marRight40">
+      <div class="panel">
+        <div class="title">
+          <h1>A* Demo</h1>
+          <h2>A simple demo of an astar implementation</h2>
+        </div>
+        <a href="demos/defold/astar/DefoldExamples/index.html"><img width="200" src="demos/defold/astar/astardemo.png"></a>
+        <br>
+        <div class="content">
+          <p>The module <a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/scripts/astar.lua">astar.lua</a> is used for the example</p><a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/">Source</a>
+          <div class="button"><a href="demos/defold/astar/DefoldExamples/index.html">Run</a></div>
+        </div>
+      </div>
+    </div>
+
+  <!---
+    <div class="box">
+      <div class="panel">
+        <div class="title">
+          <h1>Cras ornare tristique elit</h1>
+          <h2>Fusce lobortis lorem at ipsum semper</h2>
+        </div>
+        <div class="content">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra.</p>
+          <div class="button"><a href="#">More</a></div>
+        </div>
+      </div>
+    </div>
+    <div class="box marRight40">
+      <div class="panel">
+        <div class="title">
+          <h1>Fusce pellentesque suscipit nibh</h1>
+          <h2>Donec quis dui at dolor tempor interdum</h2>
+        </div>
+        <div class="content">
+          <p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.Morbi in sem quis dui placerat ornare.</p>
+          <div class="button"><a href="#">More</a></div>
+        </div>
+      </div>
+    </div>
+    <div class="box">
+      <div class="panel">
+        <div class="title">
+          <h1>Ut aliquam sollicitudin leo</h1>
+          <h2>Vivamus vestibulum nulla nec ante</h2>
+        </div>
+        <div class="content">
+          <p>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.gravida non, commodo a, sodales sit amet, nisi.</p>
+          <div class="button"><a href="#">More</a></div>
+        </div>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
+  --->
+  <!---wrap-end--->
+  <!---
+  <div class="panel">
+    <div class="title">
+      <h1>Lorem ipsum dolor sit amet, consectetur adip isonsequat </h1>
+      <h2>Nulla elit est, commodo id ultrices et, sollicitudin a odioras tortor ante, placerat at posuer</h2>
+    </div>
+    <div class="content"> <img src="css/TMPH00042/images/image1.jpg" alt="" />
+      <p>Mnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt.<br />
+        <br />
+      </p>
+      <p>Eque porro quisquam est, qui dolorem ipsum, quia dolor sit amet, consectetur, adipisci[ng] velit, sed quia non numquam. </p>
+      <div class="button floatLeft"><a href="#">More</a></div>
+    </div>
+  </div>
+  --->
+  <!---panel-end--->
+<!---page-wrap-end--->
+<!---
+<div class="footer-wrap">
+  <div class="footer">
+    <div class="panel marRight30">
+      <div class="title">
+        <h1>Links</h1>
+      </div>
+      <div class="content">
+        <ul>
+          <li><a href="http://forum.defold.com">Defold Forum</a></li>
+          <li class="bg-bottom-none"><a href="#"></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="panel marRight30">
+      <div class="title">
+        <h1>Cisiut aliquid</h1>
+      </div>
+      <div class="content">
+        <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem ldantium, ipsa, quae ab illo inventore veritatis et. Guasi architecto beatae vitae dicta sunt, explicabo.</p>
+        <p>Fusce diam mauris, auctor in cursus eget, malesuada vitae erat. Lorem ajarack ind sominto lorem ipsum,natus error cursus eget, malesuada vitae erat.</p>
+        <div class="button"><a href="#">More</a></div>
+      </div>
+    </div>
+    <div class="panelLost">
+      <div class="title">
+        <h1>Similique sunt in culpa</h1>
+      </div>
+      <div class="content"> <img src="css/TMPH00042/images/image2.jpg" alt="image" />
+        <p>Ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
+        <div class="button"><a href="#">More</a></div>
+      </div>
+    </div>
+  </div>
+</div>
+--->
+<!---footer-wrap--->
+<div class="clear"></div>
+<div class="copyright-wrap">
+  <div class="copyright">
+    <div class="content" align="center">
+      <p>CSS template by :<a href="www.alltemplateneeds.com."> www.alltemplateneeds.com.</a>&nbsp;&nbsp;
+    </div>
+  </div>
+</div>
+</body>
+</html>
