Updated the astar instructions

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <a href="demos/defold/astar/DefoldExamples/index.html"><img width="200" src="demos/defold/astar/astardemo.png"></a>
         <br>
         <div class="content">
-          <p>The module <a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/scripts/astar.lua">astar.lua</a> is used for the example</p><a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/">Source</a>
+          <p>The module <a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/scripts/astar.lua">astar.lua</a> is used for the example.
+          Click and drag the red/blue boxes to change the path</p><a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/">Source</a>
           <div class="button"><a href="demos/defold/astar/DefoldExamples/index.html">Run</a></div>
         </div>
       </div>
