--- a/index.html
+++ b/index.html
@@ -62,25 +62,31 @@
         <br>
         <div class="content">
           <p>The module <a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/scripts/astar.lua">astar.lua</a> is used for the example.
-          Click and drag the red/blue boxes to change the path</p><a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/">Source</a>
+          Click and drag the red/blue boxes to change the path</p>
+          <a href="https://github.com/JCash/defoldexamples/blob/master/main/astar/">Source</a>
           <div class="button"><a href="demos/defold/astar/DefoldExamples/index.html">Run</a></div>
         </div>
       </div>
     </div>
 
-  <!---
     <div class="box">
       <div class="panel">
         <div class="title">
-          <h1>Cras ornare tristique elit</h1>
-          <h2>Fusce lobortis lorem at ipsum semper</h2>
+          <h1>Racer2D</h1>
+          <h2>A small racer example</h2>
         </div>
+        <a href="demos/defold/racer2d/Racer2D/index.html"><img width="200" src="demos/defold/racer2d/racer2d.png"></a>
+        <br>
+
         <div class="content">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra.</p>
+          <p>A simple, currently unfinished, racing game.</p>
+          <a href="https://forum.defold.com/t/a-game-by-its-cover-pastel-riders/2458">Dev blog</a>
           <div class="button"><a href="#">More</a></div>
         </div>
       </div>
     </div>
+
+  <!---
     <div class="box marRight40">
       <div class="panel">
         <div class="title">
