Fixed waypoints in racer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>TMPS00042</title>
 <link href="css/TMPH00042/css/styles.css" rel="stylesheet" type="text/css" />
-<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 
 <!---menu--->
 <link rel="stylesheet" href="css/TMPH00042/css/superfish.css" media="screen">
@@ -79,9 +79,9 @@
         <br>
 
         <div class="content">
-          <p>A simple, currently unfinished, racing game.</p>
+          <p>A simple, currently unfinished, racing game created for a game jam.</p>
           <a href="https://forum.defold.com/t/a-game-by-its-cover-pastel-riders/2458">Dev blog</a>
-          <div class="button"><a href="#">More</a></div>
+          <div class="button"><a href="demos/defold/racer2d/Racer2D/index.html">Run</a></div>
         </div>
       </div>
     </div>
