--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>TMPS00042</title>
+<title>Demos</title>
+<link rel="icon" href="/favicon.png">
 <link href="css/TMPH00042/css/styles.css" rel="stylesheet" type="text/css" />
 <link href='https://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
