--- a/index.html
+++ b/index.html
@@ -87,19 +87,24 @@
       </div>
     </div>
 
-  <!---
     <div class="box marRight40">
       <div class="panel">
         <div class="title">
-          <h1>Fusce pellentesque suscipit nibh</h1>
-          <h2>Donec quis dui at dolor tempor interdum</h2>
+          <h1>Screen Fade</h1>
+          <h2>Screen fades using stencil buffers</h2>
         </div>
+        <a href="demos/defold/screenfade/Screenfade/index.html"><img width="200" src="demos/defold/screenfade/screenfade.gif"></a>
+        <br>
+
         <div class="content">
-          <p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.Morbi in sem quis dui placerat ornare.</p>
-          <div class="button"><a href="#">More</a></div>
+          <p>A simple demo using stencil buffers to fade the screen in or out, using simple grayscale textures</p>
+          <a href="https://github.com/JCash/stencilfade">Source</a>
+          <div class="button"><a href="demos/defold/screenfade/Screenfade/index.html">Run</a></div>
         </div>
       </div>
     </div>
+
+  <!---
     <div class="box">
       <div class="panel">
         <div class="title">
