Added dialog example

--- a/index.html
+++ b/index.html
@@ -57,6 +57,25 @@
     <div class="box marRight40">
       <div class="panel">
         <div class="title">
+          <h1>Dialogs</h1>
+          <h2>A very simple dialog example</h2>
+        </div>
+        <a href="demos/defold/dialog/DefoldExamples/index.html"><img width="200" src="demos/defold/dialog/dialog.png"></a>
+        <br>
+
+        <div class="content">
+          <p>A very simple setup function to create a dialog and display text and icons using gui nodes.
+          </p>
+          
+          <a href="https://github.com/JCash/defoldexamples/blob/master/main/dialog/">Source</a>
+          <div class="button"><a href="demos/defold/dialog/DefoldExamples/index.html">Run</a></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="panel">
+        <div class="title">
           <h1>Screen Fade</h1>
           <h2>Screen fades using stencil buffers</h2>
         </div>
@@ -71,7 +90,7 @@
       </div>
     </div>
 
-    <div class="box">
+    <div class="box marRight40">
       <div class="panel">
         <div class="title">
           <h1>Racer2D</h1>
@@ -88,7 +107,7 @@
       </div>
     </div>
        
-    <div class="box marRight40">
+    <div class="box">
       <div class="panel">
         <div class="title">
           <h1>A* Demo</h1>
