--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <div class="content">
           <p>A simple, currently unfinished, racing game created for a game jam.</p>
           <a href="https://forum.defold.com/t/a-game-by-its-cover-pastel-riders/2458">Dev blog</a>
+          <a href="https://github.com/JCash/PastelRiders">Source</a>
           <div class="button"><a href="demos/defold/racer2d/Racer2D/index.html">Run</a></div>
         </div>
       </div>
