Renamed Racer2D to Pastel Riders

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="box marRight40">
       <div class="panel">
         <div class="title">
-          <h1>Racer2D</h1>
+          <h1>Pastel Riders</h1>
           <h2>A small racer example</h2>
         </div>
         <a href="demos/defold/racer2d/Racer2D/index.html"><img width="200" src="demos/defold/racer2d/racer2d.png"></a>
