--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="content">
           <p>A simple, currently unfinished, racing game created for a game jam.</p>
-          <a href="https://forum.defold.com/t/a-game-by-its-cover-pastel-riders/2458">Dev blog</a>
+          <a href="https://forum.defold.com/t/a-game-by-its-cover-pastel-riders/2458">Dev blog</a><br>
           <a href="https://github.com/JCash/PastelRiders">Source</a>
           <div class="button"><a href="demos/defold/racer2d/Racer2D/index.html">Run</a></div>
         </div>
