Added segment in index html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
           <h1>Dialogs</h1>
           <h2>A very simple dialog example</h2>
         </div>
+        <a href="demos/mapmaker/index.html"><img width="200" src="demos/mapmaker/mapmaker.png"></a>
+        <br>
+
+        <div class="content">
+          <p>A simple tool to play with map making
+          </p>
+          
+          <a href="https://github.com/JCash/dungeonmaker/blob/master/viewer/">Source</a>
+          <div class="button"><a href="demos/mapmaker/index.html">Run</a></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box marRight40">
+      <div class="panel">
+        <div class="title">
+          <h1>Dialogs</h1>
+          <h2>A very simple dialog example</h2>
+        </div>
         <a href="demos/defold/dialog/DefoldExamples/index.html"><img width="200" src="demos/defold/dialog/dialog.png"></a>
         <br>
 
