--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div class="box marRight40">
       <div class="panel">
         <div class="title">
-          <h1>Dialogs</h1>
-          <h2>A very simple dialog example</h2>
+          <h1>Mapmaker</h1>
+          <h2>A map making tool</h2>
         </div>
         <a href="demos/mapmaker/index.html"><img width="200" src="demos/mapmaker/mapmaker.png"></a>
         <br>
